enabled preview features on the surefire maven plugin